--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>learn german</title>
   </head>
   <body>
-    <p>Site under construction</p>
-    <p>2</p>
+    <p>privacy policy</p>
+    <p>
+      in short i collect no data and will never do, this page is only for the
+      store requirement.
+    </p>
   </body>
 </html>
